Create full interactive and responsive webpage

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   <body>
     <h1>Carlos's Puppy Bowl</h1>
     <main>
-      <article>
-        <section id="add-player"></section>
-      </article>
+      <article id="add-player"></article>
     </main>
     <script src="index.js"></script>
   </body>
